[package]
name = "nnue_marlin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3


[profile.dev.build-override]
opt-level = 3

[dependencies]
tch = { git = "https://github.com/LaurentMazare/tch-rs.git" }
chess = "3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68" }
rand = "0.8.4"
clap = "2"
